[gd_scene load_steps=7 format=3 uid="uid://dl533welglro5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_i2r8q"]
[ext_resource type="PackedScene" uid="uid://l3rymdu4v2se" path="res://scenes/deck_of_cards.tscn" id="2_gpse3"]
[ext_resource type="Texture2D" uid="uid://bbl1exw67ssdo" path="res://assests/sprites/enter.png" id="4_5mek4"]
[ext_resource type="Texture2D" uid="uid://b4t6jrc1dypjk" path="res://assests/sprites/del_bt.png" id="5_cevht"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p20ra"]
atlas = ExtResource("5_cevht")
region = Rect2(0, 0, 160, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_svvd5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p20ra")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="main" type="Node2D"]
script = ExtResource("1_i2r8q")
card_to_return = 5

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.423529, 0.0745098, 0.113725, 1)

[node name="control" type="Node" parent="."]

[node name="labels" type="Control" parent="control"]
layout_mode = 3
anchors_preset = 0
offset_left = -86.0
offset_top = -18.0
offset_right = -46.0
offset_bottom = 22.0

[node name="cardToTurn" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 134.0
offset_top = 87.0
offset_right = 276.0
offset_bottom = 110.0
text = "carte à retourner :"

[node name="cardToTurnLabel" type="Label" parent="control/labels/cardToTurn"]
layout_mode = 0
offset_left = 147.0
offset_right = 187.0
offset_bottom = 23.0
text = "0"

[node name="score_label" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 130.0
offset_top = 199.0
offset_right = 181.0
offset_bottom = 222.0
text = "score :"

[node name="score_label_val" type="Label" parent="control/labels/score_label"]
layout_mode = 0
offset_left = 55.0
offset_right = 95.0
offset_bottom = 23.0
text = "0"

[node name="temp_score" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 127.0
offset_top = 114.0
offset_right = 244.0
offset_bottom = 137.0
text = "valeur du mot :"

[node name="temp_score_val" type="Label" parent="control/labels/temp_score"]
layout_mode = 0
offset_left = 120.0
offset_right = 160.0
offset_bottom = 23.0
text = "0"

[node name="difficulty" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 130.0
offset_top = 143.0
offset_right = 208.0
offset_bottom = 166.0
text = "difficulté :"

[node name="difficulty_label" type="Label" parent="control/labels/difficulty"]
layout_mode = 0
offset_left = 82.0
offset_right = 122.0
offset_bottom = 23.0
text = "0"

[node name="cardLeft" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 127.0
offset_top = 172.0
offset_right = 261.0
offset_bottom = 195.0
text = "cartes restantes :"

[node name="cardLeftLabel" type="Label" parent="control/labels/cardLeft"]
layout_mode = 0
offset_left = 140.0
offset_right = 180.0
offset_bottom = 23.0
text = "0"

[node name="RuleName" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 131.0
offset_top = 35.0
offset_right = 230.0
offset_bottom = 58.0
text = "Cartomancie"

[node name="maxScore" type="Label" parent="control/labels"]
layout_mode = 0
offset_left = 131.0
offset_top = 60.0
offset_right = 264.0
offset_bottom = 83.0
text = "score maximum :"

[node name="maxScoreLabel" type="Label" parent="control/labels/maxScore"]
layout_mode = 0
offset_left = 140.0
offset_right = 180.0
offset_bottom = 23.0
text = "0"

[node name="zoning" type="Control" parent="control"]
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_right = 290.0
offset_bottom = 40.0

[node name="hand" type="Marker2D" parent="control/zoning"]
position = Vector2(160, 532)

[node name="play_area" type="Marker2D" parent="control/zoning"]
position = Vector2(109, 120)

[node name="buttons" type="Control" parent="control"]
layout_mode = 3
anchors_preset = 0
offset_left = 233.0
offset_top = 16.0
offset_right = 273.0
offset_bottom = 56.0

[node name="confirm" type="Button" parent="control/buttons"]
layout_mode = 0
offset_left = 613.0
offset_top = 195.0
offset_right = 751.0
offset_bottom = 226.0
text = "confirmer le mot"

[node name="Sprite2D" type="Sprite2D" parent="control/buttons/confirm"]
position = Vector2(186, 10)
scale = Vector2(0.390625, 0.390625)
texture = ExtResource("4_5mek4")

[node name="draw_new_card" type="Button" parent="control/buttons"]
layout_mode = 0
offset_left = 615.0
offset_top = 318.0
offset_right = 852.0
offset_bottom = 349.0
text = "retourner de nouvelles cartes"

[node name="endGame" type="Button" parent="control/buttons"]
layout_mode = 0
offset_left = 615.0
offset_top = 361.0
offset_right = 784.0
offset_bottom = 392.0
text = "mettre fin à la partie"

[node name="del_all" type="Button" parent="control/buttons"]
layout_mode = 0
offset_left = 614.0
offset_top = 276.0
offset_right = 730.0
offset_bottom = 307.0
text = "effacer le mot"

[node name="del_1" type="Button" parent="control/buttons"]
layout_mode = 0
offset_left = 613.0
offset_top = 236.0
offset_right = 810.0
offset_bottom = 267.0
text = "effacer la dernière lettre"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="control/buttons/del_1"]
position = Vector2(244, 17)
scale = Vector2(0.45, 0.45)
sprite_frames = SubResource("SpriteFrames_svvd5")

[node name="deck_of_cards" parent="." instance=ExtResource("2_gpse3")]
position = Vector2(259, 287)

[node name="cardsHolder" type="Node" parent="."]

[connection signal="button_up" from="control/buttons/confirm" to="." method="_on_confirm_button_up"]
[connection signal="button_up" from="control/buttons/draw_new_card" to="." method="_on_draw_new_card_button_up"]
[connection signal="button_up" from="control/buttons/endGame" to="." method="_on_end_game_button_up"]
[connection signal="button_up" from="control/buttons/del_all" to="." method="_on_del_all_button_up"]
[connection signal="button_up" from="control/buttons/del_1" to="." method="_on_del_1_button_up"]
